# arc_prize

./: IMPLEMENTATION_SUMMARY.txt  README.md  data  main.py  pyproject.toml  run.sh  run_ddp.sh
paper_reproduction/: COMPARISON.md  INDEX.md  QUICKREF.md  README.md  SUMMARY.md  __init__.py  configs.py  examples.py  main.py  model.py  test.py  train.py
src/: arc_model.py  data_processing.ipynb  gptcode.py  idea.py  models.py  sudoku_extreme_pipeline.py  train_ddp.py
src/datasets/: arc_dataset.py  arc_dataset_v2.py  common.py  sudoku_extreme.py
src/varc/: __init__.py  data.py  model.py  smoke_test.py  train.py  train_ddp.py
