[project]
name = "arc-prize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argdantic>=1.3.3",
    "huggingface-hub>=1.1.4",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pydantic>=2.12.3",
    "torch>=2.8.0",
    "wandb>=0.23.0",
]
